# server/src/Model/album.ts
@@ -1,9 +1,8 @@
+  import { Track } from './track';
+  
   // album.model.ts
   export interface Album {
     id: string;
     title: string;
-    cover_art: string | null;
-    created_at: Date;
-    updated_at: Date;
-    deleted_at: Date | null;
+    tracks?: Track[];
   }
